// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emoji support Emoji characters are separeted with a line feed with the option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 3,
      "line": 2,
      "offset": 5,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "😊😊",
}
`;

exports[`Emoji support Emoji characters are separeted with a line feed without the option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 3,
      "line": 2,
      "offset": 5,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "😊
😊",
}
`;

exports[`Emoji support Latin characters between a line feed with the option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 17,
      "line": 2,
      "offset": 30,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "Good morning.
Have a nice day.",
}
`;

exports[`Hangul support Hangul characters between a line feed with the option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 2,
      "offset": 6,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "안녕하세요",
}
`;

exports[`Hangul support Hangul characters between a line feed without the option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 4,
      "line": 2,
      "offset": 6,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "안녕
하세요",
}
`;

exports[`Hangul support Latin characters between a line feed with the option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 17,
      "line": 2,
      "offset": 30,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "Good morning.
Have a nice day.",
}
`;

exports[`a line break should be removed Chinese characters are separeted with a carriage return 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 2,
      "offset": 14,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "上午好。这是个美丽的日子。",
}
`;

exports[`a line break should be removed Chinese characters are separeted with a carriage return and a line feed 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 2,
      "offset": 15,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "上午好。这是个美丽的日子。",
}
`;

exports[`a line break should be removed Chinese characters are separeted with a line feed 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 10,
      "line": 2,
      "offset": 14,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "上午好。这是个美丽的日子。",
}
`;

exports[`a line break should be removed Japanese characters are separeted with a line feed 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 12,
      "line": 2,
      "offset": 22,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "おはようございます。今日はいい天気ですね。",
}
`;

exports[`additional regexp support add left parenthesis 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 28,
      "line": 2,
      "offset": 34,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "半角の丸括弧(全角の丸括弧はデフォルトに含まれる)を追加しました。",
}
`;

exports[`additional regexp support add right parenthesis 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 15,
      "line": 2,
      "offset": 36,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "(全角はデフォルトでサポートしているので)半角の丸括弧を追加しました。",
}
`;

exports[`nothing should be changed CJK characters are separated with a space 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 12,
      "line": 1,
      "offset": 11,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "おはよう ございます。",
}
`;

exports[`nothing should be changed Latin characters are separated with a line break 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 17,
      "line": 2,
      "offset": 30,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "Good morning.
Have a nice day.",
}
`;

exports[`nothing should be changed no line break exists 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 11,
      "line": 1,
      "offset": 10,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "おはようございます。",
}
`;

exports[`squared Latin abbreviation support Latin characters between a line feed with the option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 17,
      "line": 2,
      "offset": 30,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "Good morning.
Have a nice day.",
}
`;

exports[`squared Latin abbreviation support squared Latin abbreviation characters between a line feed with option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 2,
      "offset": 3,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "㎅㎆",
}
`;

exports[`squared Latin abbreviation support squared Latin abbreviation characters between a line feed without option 1`] = `
Object {
  "position": Object {
    "end": Object {
      "column": 2,
      "line": 2,
      "offset": 3,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "text",
  "value": "㎅
㎆",
}
`;
